# waveshare_pico_10dof_imu

./: CMakeLists.txt  README.md
c/: main.c
c/lps22hb/: CMakeLists.txt  lps22hb.h
include/waveshare_pico_10dof_imu/: icm20948.h  lps22hb.h
src/: main.c
src/icm20948/: icm20948.c
src/lps22hb/: lps22hb.c
